[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vacuum_interfaces"
version = "0.0.1"
authors = [
  { name="Ulrik Södergreb", email="ulrik.sodergren@luxbright.com" },
]
description = "A collection of classes for commuincation with various Vacuum pump controllers and sensors."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luxbright-com/vacuum_interfaces"
"Bug Tracker" = "https://github.com/luxbright-com/vacuum_interfaces/issues"