[build-system]
requires = [
    "setuptools>=75.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vacuum_interfaces"
version = "0.0.3"
authors = [
  { name="Ulrik Södergreb", email="ulrik.sodergren@luxbright.com" },
]
description = "A collection of classes for commuincation with various Agilent Vacuum pump controllers and sensors."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles >= 24.1",
    "aioserial >= 1.3",
    "pyserial >=3.5",
    "tenacity >= 9.0"
]

[project.optional-dependencies]
test = [
    "pytest > 8.3",
    "pytest-asyncio > 0.24",
    "pytest-timeout > 2.3"
]

[project.urls]
"Homepage" = "https://github.com/luxbright-com/vacuum_interfaces"
"Bug Tracker" = "https://github.com/luxbright-com/vacuum_interfaces/issues"
